Fix links in home page and spacing issues for cards

--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -38,3 +38,11 @@ nav.navbar a.navbar-brand {
 footer {
   margin-top: 30px;
 }
+
+.card-deck {
+  width: 100%;
+
+  .card-footer {
+    text-align: center;
+  }
+}
