--- a/src/scss/_page--index.scss
+++ b/src/scss/_page--index.scss
@@ -1,9 +1,3 @@
 body.page--index {
-  .card-deck {
-    width: 100%;
 
-    .card-footer {
-      text-align: center;
-    }
-  }
 }
